--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -9,11 +9,11 @@ package:
 source:
   fn: {{ name }}-{{ version }}.tar.gz
   url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ camelName }}-{{ version }}.tar.gz
-  md5: dc15fe08b07b434d3d2c4063b4674b72
+  sha256: c5244de44cc85d2267115624d83faef3f9e8f088756788694f305a5d5ad137c5
 
 build:
 
-  number: 0
+  number: 1
   script: python setup.py install --single-version-externally-managed --record=record.txt
 
 requirements:
