--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,9 +1,9 @@
 {% set name = "Flask-SQLAlchemy" %}
-{% set version = "2.2" %}
+{% set version = "2.3.0" %}
 {% set compress_type = "tar.gz" %}
 {%set hash_type = "sha256" %}
-{%set hash_val = "f0d8241efba723d7b878f73550f5d3c0fbb042416123b52b36640b7491fa208b" %}
-{%set build_num = "1" %}
+{%set hash_val = "da19ff62e31f82825b5467811c76e2a1c60bba927e175fe091a6f739063dd829" %}
+{% set build_num = 0 %}
 
 
 package:
