--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,9 +1,9 @@
 {% set name = "Flask-SQLAlchemy" %}
 {% set version = "2.3.0" %}
-{% set compress_type = "tar.gz" %}
-{%set hash_type = "sha256" %}
-{%set hash_val = "da19ff62e31f82825b5467811c76e2a1c60bba927e175fe091a6f739063dd829" %}
-{% set build_num = 0 %}
+{% set bundle = "tar.gz" %}
+{% set hash_type = "sha256" %}
+{% set hash = "da19ff62e31f82825b5467811c76e2a1c60bba927e175fe091a6f739063dd829" %}
+{% set build = 0 %}
 
 
 package:
@@ -11,13 +11,13 @@ package:
   version: {{ version }}
 
 source:
-  fn: {{ name }}-{{ version }}.{{ compress_type }}
-  url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.{{ compress_type }}
-  {{ hash_type }}: {{ hash_val }}
+  fn: {{ name }}-{{ version }}.{{ bundle }}
+  url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.{{ bundle }}
+  {{ hash_type }}: {{ hash }}
 
 build:
-
-  number: {{ build_num }}
+  noarch: python
+  number: {{ build }}
   script: python setup.py install --single-version-externally-managed --record=record.txt
 
 requirements:
@@ -28,7 +28,7 @@ requirements:
   run:
     - python
     - flask >=0.10
-    - sqlalchemy >=0.7
+    - sqlalchemy >=0.8.0
 
 test:
   imports:
@@ -40,7 +40,7 @@ about:
   license_family: BSD
   license_file: LICENSE
   summary: 'Adds SQLAlchemy support to your Flask application'
-  dev_url: http://github.com/mitsuhiko/flask-sqlalchemy
+  dev_url: https://github.com/mitsuhiko/flask-sqlalchemy
   doc_url: http://flask-sqlalchemy.pocoo.org/{{ version }}/
 
 extra:
