--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -32,7 +32,7 @@ about:
   home: http://github.com/mitsuhiko/flask-sqlalchemy
   license: BSD-3-Clause
   license_family: BSD
-  license_file: LICENSE
+  license_file: LICENSE.rst
   summary: 'Adds SQLAlchemy support to your Flask application'
   dev_url: https://github.com/mitsuhiko/flask-sqlalchemy
   doc_url: http://flask-sqlalchemy.pocoo.org/{{ version }}/
