--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -21,8 +21,8 @@ requirements:
     - pip
   run:
     - python
-    - flask >=0.10
-    - sqlalchemy >=0.8.0
+    - flask >=1.0.4
+    - sqlalchemy >=1.2
 
 test:
   imports:
@@ -40,3 +40,4 @@ about:
 extra:
   recipe-maintainers:
     - pmlandwehr
+    - synapticarbors
