--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -17,10 +17,10 @@ build:
 
 requirements:
   host:
-    - python
+    - python ==2.7 | >=3.5
     - pip
   run:
-    - python
+    - python ==2.7 | >=3.5
     - flask >=1.0.4
     - sqlalchemy >=1.2
 
