--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -17,16 +17,21 @@ build:
 
 requirements:
   host:
-    - python ==2.7 | >=3.5
+    - python >=3.7
     - pip
+    - pdm-pep517 >=1.0.0
   run:
-    - python ==2.7 | >=3.5
-    - flask >=1.0.4
-    - sqlalchemy >=1.2
+    - python >=3.7
+    - flask >=2.2
+    - sqlalchemy >=1.4.18
 
 test:
   imports:
     - flask_sqlalchemy
+  requires:
+    - pip
+  commands:
+    - pip check
 
 about:
   home: https://github.com/pallets/flask-sqlalchemy
