--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set name = "flask_sqlalchemy" %}
+{% set name = "Flask-SQLAlchemy" %}
 {% set version = "3.1.1" %}
 
 
@@ -7,7 +7,7 @@ package:
   version: {{ version }}
 
 source:
-  url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
+  url: https://pypi.io/packages/source/f/flask_sqlalchemy/flask_sqlalchemy-{{ version }}.tar.gz
   sha256: e4b68bb881802dda1a7d878b2fc84c06d1ee57fb40b874d3dc97dabfa36b8312
 
 build:
