--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -19,7 +19,7 @@ requirements:
   host:
     - python >=3.8
     - pip
-    - flit-core =3.*
+    - flit-core <4
   run:
     - python >=3.8
     - flask >=2.2.5
